SAK-16802 Adjust code in preparation for allowing content size > 2G (syllabus)
git-svn-id: https://source.sakaiproject.org/svn/syllabus/trunk@65686 66ffb92e-73f9-0310-93c1-f5514f145a0a